internal/gatewayapi/testdata/policy-cross-namespace-targetselector-valid-referencegrant-gateway-target.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: policy-target-ns
    name: selector-gateway
    labels:
      team: blue
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    namespace: policy-target-ns
    name: selector-route
  spec:
    parentRefs:
    - name: selector-gateway
      sectionName: http
    rules:
    - matches:
      - path:
          value: /
      backendRefs:
      - name: backend
        port: 8080
securityPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    namespace: policy-ns
    name: cross-ns-selector-policy
  spec:
    targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespaces:
        from: Selector
        selector:
          matchLabels:
            team: blue
      matchLabels:
        team: blue
    cors:
      allowOrigins:
      - https://example.com
      allowMethods:
      - GET
      allowHeaders:
      - x-example
      exposeHeaders:
      - x-exposed
      maxAge: 1000s
namespaces:
- apiVersion: v1
  kind: Namespace
  metadata:
    name: policy-target-ns
    labels:
      team: blue
referenceGrants:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: ReferenceGrant
  metadata:
    namespace: policy-target-ns
    name: allow-selector-sp
  spec:
    from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: policy-ns
    to:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: selector-gateway
services:
- apiVersion: v1
  kind: Service
  metadata:
    namespace: policy-target-ns
    name: backend
  spec:
    ports:
    - port: 8080
      name: http
      protocol: TCP
endpointSlices:
- apiVersion: discovery.k8s.io/v1
  kind: EndpointSlice
  metadata:
    name: endpointslice-target-service
    namespace: policy-target-a
    labels:
      kubernetes.io/service-name: target-service
  addressType: IPv4
  ports:
  - name: http
    protocol: TCP
    port: 8080
  endpoints:
  - addresses:
    - 8.8.8.8
    conditions:
      ready: true
- apiVersion: discovery.k8s.io/v1
  kind: EndpointSlice
  metadata:
    name: endpointslice-backend
    namespace: policy-target-ns
    labels:
      kubernetes.io/service-name: backend
  addressType: IPv4
  ports:
  - name: http
    protocol: TCP
    port: 8080
  endpoints:
  - addresses:
    - 8.8.4.4
    conditions:
      ready: true
